tests/baselines/reference/augmentExportEquals6_1.errors.txt
file3.ts(4,9): error TS2454: Variable 'a' is used before being assigned.


==== file1.d.ts (0 errors) ====
    declare module "file1" {
        class foo {}
        namespace foo {
            class A {}
        }
        export = foo;
    }
    
    
==== file2.ts (0 errors) ====
    /// <reference path="file1.d.ts"/>
    import x = require("file1"); 
    
    // OK - './file1' is a namespace
    declare module "file1" {
        interface A { a: number }
    }
    
==== file3.ts (1 errors) ====
    import * as x from "file1";
    import "file2";
    let a: x.A;
    let b = a.a;
            ~
!!! error TS2454: Variable 'a' is used before being assigned.